@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.286 2013/06/29 12:04:45 juhaszp Exp $"); }
+static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.287 2013/06/29 19:17:20 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graph3d.c */
@@ -2322,7 +2322,7 @@ draw_3d_graphbox(struct surface_points *plot, int plot_num, WHICHGRID whichgrid,
 		    ang = atan2(angy1-angy0, angx1-angx0) / DEG2RAD;
 		    angle = (ang > 0) ? floor(ang + 0.5) : floor(ang - 0.5);
 		    step /= 2;
-		    if (step > 0)
+		    if (step > 0  &&  Y_AXIS.max > Y_AXIS.min)
 			angle += 180;
 		}
 
@@ -2448,7 +2448,7 @@ draw_3d_graphbox(struct surface_points *plot, int plot_num, WHICHGRID whichgrid,
 			ang = atan2(angy1-angy0, angx1-angx0) / DEG2RAD;
 			angle = (ang > 0) ? floor(ang + 0.5) : floor(ang - 0.5);
 			step /= 2;
-			if (step > 0)
+			if (step > 0  &&  X_AXIS.max > X_AXIS.min)
 			    angle += 180;
 		    }
 		    if (Y_AXIS.ticmode & TICS_ON_AXIS) {
